# url-builder

./: README.md  pyproject.toml  setup.py
url_builder/: __init__.py  abstractions.py  builder.py  options.py
url_builder/marketplace/: amazon.py  rihappy.py
url_builder/marketplaces/: amazon.py  amazon_pt.py  mercado_livre.py  mercado_livre_api.py  rihappy.py
